[package]
name = "christmas-lights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7"
futures-util = { version = "0.3", default-features = false }
embassy-time = { git = "https://github.com/agausmann/embassy.git" }
ws2812-spi = "0.4"

[dependencies.embassy-executor]
git = "https://github.com/agausmann/embassy.git"
features = [
    "integrated-timers",
    "nightly",
]

[dependencies.embassy-rp]
git = "https://github.com/agausmann/embassy.git"
features = [
    "critical-section-impl",
    "pio",
    "time-driver",
    "nightly",
]

[profile.dev]
opt-level = 's'
lto = true

[profile.release]
opt-level = 's'
lto = true

[patch.crates-io]
pio = { git = "https://github.com/rp-rs/pio-rs", branch = "main" }
