[package]
name = "christmas-lights"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "0.2"
fugit = "0.3"
micromath = "2.0"
nb = "1.0"
rp2040-boot2 = "0.2"
smart-leds = "0.3"
ws2812-pio = "0.5"

[dependencies.nanorand]
version = "0.7"
default-features = false
features = ["wyrand"]

[dependencies.once_cell]
version = "1.16"
default-features = false
features = ["critical-section"]

[dependencies.rp2040-hal]
version = "0.7"
features = [
    "critical-section-impl",
    "rt",
]

[profile.dev]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
lto = true
